--- a/AppEntrega/templates/AppEntrega/test_covid.html
+++ b/AppEntrega/templates/AppEntrega/test_covid.html
@@ -1,7 +1,7 @@
 {% extends "AppEntrega/padre.html" %}
 
 {% block titulo %}
-Tests para Covid
+Testeos
 {% endblock %}
 
 {% block contenido %}
@@ -10,7 +10,17 @@ Tests para Covid
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Formulario de tests</h1>                    
+                <h1>Registro de Testeos</h1>     
+                <h2></h2>         
+                <form action="{% url 'tests' %}" method="POST">
+                    {% csrf_token %}
+                <table>
+                    {{ formulario_testeos.as_table }}
+                </table>   
+
+                <input type="submit" value="Enviar">
+
+                </form> 
                 
             </div>
         </div>
